[tool.poetry]
name = "phasenet-pytorch"
version = "0.0.1"
description = "PyTorch adaption of PhaseNet"
authors = [
    "Ziyi Xi <ziyixi@mail.ustc.edu.cn>",
    "Weiqiang Zhu <wayne.weiqiang@gmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
torch = [
    {url="https://download.pytorch.org/whl/cu113/torch-1.11.0%2Bcu113-cp39-cp39-linux_x86_64.whl",markers = "sys_platform == 'linux'"},
    {version="^1.11.0",markers = "sys_platform == 'darwin'"}]
torchvision = [
    {url="https://download.pytorch.org/whl/cu113/torchvision-0.12.0%2Bcu113-cp39-cp39-linux_x86_64.whl",markers = "sys_platform == 'linux'"},
    {version="^0.12.0",markers = "sys_platform == 'darwin'"}]
torchaudio = [
    {url="https://download.pytorch.org/whl/cu113/torchaudio-0.11.0%2Bcu113-cp39-cp39-linux_x86_64.whl",markers = "sys_platform == 'linux'"},
    {version="^0.11.0",markers = "sys_platform == 'darwin'"}]
hydra-core = "^1.1.2"
omegaconf = "^2.1.1"
pyasdf = "^0.7.5"
obspy = "^1.3.0"
tqdm = "^4.64.0"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
tensorboard = "^2.8.0"
pytorch-lightning = "^1.6.2"

[tool.poetry.group.dev.dependencies]
pylint = "^2.13.7"
autopep8 = "^1.6.0"
Sphinx = "^4.5.0"
rstcheck = "^5.0.0"
click = "^8.1.2"
loguru = "^0.6.0"
pandas = "^1.4.2"
torch-tb-profiler = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
